--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          content="With the divine grace of the almighty, inviting you and your family to Sunidhi's wedding to be held on 25th June at Ritz Resort, Lucknow from 8:00 PM onwards." />
       <meta property="og:site_name" content="Wedding Invitation | 25th June" />
 
-      <title>Wedding Invitation | Nov 29 | Ashirwad Garden, Ranchi</title>
+      <title>Wedding Invitation | June 25 | Ritz Resort, Lucknow</title>
 
       <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
       <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap'>
