--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <link rel="stylesheet" href="./css/style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    </head>
-   <body>
+   <body style="background-color: rgb(251, 226, 179);">
       <!-- partial:index.partial.html -->
       <div class="sakura-falling"></div>
       <img src="https://i.imgur.com/BlwUWb2.png" alt="image-top-right" width = "25%" class="top-right-decoration">
